# letterSimu

./: CMakeLists.txt  README.md  config.toml
include/: ConfigReader.hpp  DnaReads.hpp  DnaReference.hpp  Logger.hpp  RnaReads.hpp  RnaTranscriptome.hpp  TargetParser.hpp
src/: ConfigReader.cpp  DnaReads.cpp  DnaReference.cpp  Logger.cpp  RnaReads.cpp  RnaTranscriptome.cpp  main.cpp
